tests/NormalTests/paczka1/small_fuzzy/66950585.err
Error in line 1: X2F S985 99,7
Error in line 3: 8klEIjA A865 35,6
